<resources>
    <string name="app_name">SuperApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="batman_name">Batman</string>
    <string name="batman_alias">Bruce Wayne</string>
    <string name="batman_powers">exceptional martial artist, combat strategy, inexhaustible wealth, brilliant deductive skill, advanced technology</string>
    <string name="flash_name">Flash</string>
    <string name="flash_alias">Barry Allen, Jay Garrick, Wally West</string>
    <string name="flash_powers">super speed, intangibility, superhuman agility, time travel, creates and controls lightning, multiversal knowledge</string>
    <string name="superman_name">Superman</string>
    <string name="superman_alias">Clark Kent, Kal-El</string>
    <string name="superman_powers">super strength, flight, invulnerability, super speed, heat vision, freeze breath, x-ray vision, superhuman hearing, healing factor</string>
    <string name="wonder_woman_name">Mujer Maravilla</string>
    <string name="wonder_woman_powers">super strength, invulnerability, flight, combat skill, combat strategy, superhuman agility, healing factor, magic weaponry</string>
    <string name="wonder_woman_alias">Diana Prince</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="superheroes">Superheroes</string>
    <string name="title_menu_text"> Principal Menu</string>
    <string name="botton_navi_text">Botton Navigation</string>
    <string name="swipe_tabs_text">Swipe Tabs</string>
    <string name="navigation_drawer_text">Navigation Drawer</string>
    <string name="masterdetail_text">Master Detail</string>
    <string name="super_title">Superheroes</string>
</resources>